--- a/Userguide.html
+++ b/Userguide.html
@@ -11,7 +11,7 @@
    </head>
    <body>
 		<ul class="menu">
-			<li class="menu"><a href="VinsonElijahHomePage.html">Home</a></li>
+			<li class="menu"><a href="index.html">Home</a></li>
 			<li class="menu"><a href="Table.html">Table</a></li>
 			<li style="float:right" class="menu"><a href="About.html">About</a></li>
 			<li class="menu"><a href="Form.html">Form</a></li>
@@ -128,3 +128,4 @@
   <footer class="footer">&copy; Elijah Vinson — PC Builder User Guide</footer>
 </body>
 </html> 
+
