Fix HTML formatting and update links in Table.html

--- a/Table.html
+++ b/Table.html
@@ -11,7 +11,7 @@
    </head>
    <body>
 		<ul class="menu">
-			<li class="menu"><a href="VinsonElijahHomePage.html">Home</a></li>
+			<li class="menu"><a href="index.html">Home</a></li>
 			<li class="menu active"><a href="Table.html">Table</a></li>
 			<li style="float:right" class="menu"><a href="About.html">About</a></li>
 			<li class="menu"><a href="Form.html">Form</a></li>
@@ -94,3 +94,4 @@
 			<hr>
    </body>
 </html>
+
