Fix HTML formatting and update links

--- a/Form.html
+++ b/Form.html
@@ -11,7 +11,7 @@
    </head>
    <body>
 		<ul class="menu">
-			<li class="menu"><a href="VinsonElijahHomePage.html">Home</a></li>
+			<li class="menu"><a href="index.html">Home</a></li>
 			<li class="menu"><a href="Table.html">Table</a></li>
 			<li style="float:right" class="menu"><a href="About.html">About</a></li>
 			<li class="menu active"><a href="Form.html">Form</a></li>
@@ -85,3 +85,4 @@
 
 </body>
 </html>
+
