Fix HTML structure and update image references

--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
    </head>
    <body>
 		<ul class="menu">
-			<li class="menu"><a href="VinsonElijahHomePage.html">Home</a></li>
+			<li class="menu"><a href="index.html">Home</a></li>
 			<li class="menu"><a href="Table.html">Table</a></li>
 			<li style="float:right" class="menu active"><a href="About.html">About</a></li>
 			<li class="menu"><a href="Form.html">Form</a></li>
@@ -53,3 +53,4 @@
 			<hr>
    </body>
 </html>
+
